projects/examples/source/02.02.statement.expression.operator.cpp
#include <cassert>
#include <cmath>

int main()
{
	const auto b1 = true, b2 = false;

	assert((    ! b1) == 0);
	assert((    ! b2) == 1);

//  ================================================================================================

	assert((b1 && b2) == 0);
	assert((b1 || b2) == 1);

//  ================================================================================================

	assert(!(b1 && b2) == (!b1 || !b2));
	assert(!(b1 || b2) == (!b1 && !b2));

	assert(((b1 && b2) && (1 + 2 == 3)) == 0);

//  ================================================================================================

	auto x = 1, y = 2;

	assert((  +  y) == +2);
	assert((  -  y) == -2);

//  ================================================================================================

	assert((x +  y) == +3);
	assert((x -  y) == -1);
	assert((x *  y) == +2);
	assert((x /  y) == +0);
	assert((x %  y) == +1);

//  ================================================================================================

	assert((x += y) == +3);
	assert((x -= y) == +1);
	assert((x *= y) == +2);
	assert((x /= y) == +1);
	assert((x %= y) == +1);

//  ================================================================================================

	assert((  ++ y) == +3);
	assert((  -- y) == +2);
	assert((x ++  ) == +1);
	assert((x --  ) == +2);

//  ================================================================================================

	assert((x <  y) ==  1);
	assert((x >  y) ==  0);
	assert((x <= y) ==  1);
	assert((x >= y) ==  0);
	assert((x == y) ==  0);
	assert((x != y) ==  1);
	
//  ================================================================================================

	assert((!!x != !!y) == 0);

	std::swap(x, y);

	x = x + y; 
	y = x - y; 
	x = x - y;

	assert(std::abs(1.0 * x / y - 0.5) < 0.000001);

	assert(( x %  y) == +1);
	assert(( x % -y) == +1);
	assert((-x %  y) == -1);
	assert((-x % -y) == -1);

//	x+++++y; // error

//  ================================================================================================

	[[maybe_unused]] auto z = (1 + 4) / (2 + 3);

//	z = (z + ++z); // error

	[[maybe_unused]] auto m = 1 + 2 + 3;
	[[maybe_unused]] auto n = x = y = z;

//	assert((++m, ++n) == 2); // bad

	return 0;
}
